--- a/assets/www/editProfile.html
+++ b/assets/www/editProfile.html
@@ -1,23 +1,6 @@
-<!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
+
     <head>
     
     
@@ -29,14 +12,13 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.js"></script>
 	
-	<script type="text/javascript" src="./js/login.js"></script>
-	<script type="text/javascript" src="./js/createAccount.js"></script>
+	<script type="text/javascript" src="./js/editAccount.js"></script>
 	
 	<style type="text/css">
 		.ui-field-contain div.ui-slider-switch { width: 130px;  }
 	</style>
 	
-	<title>Find a partner</title>
+	<title>Edit Profile</title>
 
 	<script lanuage="javscript">
 		function changePage(){
@@ -45,36 +27,12 @@
 		}
 	</script>
 </head>
+
 <body>
-
-<div data-role="page" id="loginPage">
-	<div data-role="header" data-position="fixed" data-theme="b">
-		<h1>Log-in</h1>
-	</div>
-	<div data-role="content" data-theme="b">
-   
-		<div data-role="fieldcontain"  >
-			<label for="userid">User ID:</label>
-			<input type="text" name="userid" id="userid" value="" placeholder="userid"/>
-		</div>
-		<div data-role="fieldcontain"  >
-			<label for="password">Password:</label>
-			<input type="password" name="password" id="password" value="" placeholder="password"/>
-		</div>
-		<input type="button" id="loginButton" value="Log-in">
-		<a href="#createAccountPage" data-role="button">Create account</a>
-	</div>
-	<div data-role="footer" data-theme="b">
-		<div data-role="fieldcontain"  >
-			<div id="loginResponse"></div>
-		</div>
-	</div>
-</div>
-
-<div data-role="page" id="createAccountPage" data-add-back-btn="true">
+<div data-role="page" id="editProfile" data-add-back-btn="true">
 	
 	<div data-role="header" data-position="fixed" data-theme="b">
-		<h1>Log-in</h1>
+		<h1>Edit Profile</h1>
 	</div>
 	<div data-role="content" data-theme="b">
    
@@ -118,22 +76,8 @@
 			<label for="phonenumber">Phone Number:</label>
 			<input type="text" name="phonenumber" id="phonenumber" value="" placeholder="phonenumber"/>
 		</div>
-		<input type="button" id="createAccountButton" value="Create account">
+		<input type="button" id="editAccountButton" value="Save account">
 	</div>
 </div>
-
-<div data-role="page" id="main">
-	<div data-role="header" data-position="fixed" data-theme="b">
-		<h1>Main Menus</h1>
-	</div>
-	<div data-role="content" data-theme="b">
-		<a href="editProfile.html" data-role="button">Edit profile</a>
-		<a href="#schedule" data-role="button">Schedule</a>
-		<a href="#manageCourts" data-role="button">Manage courts</a>
-	</div>
-	
-</div>
-
 </body>
 </html>
-
