briefly modified about cookie and page.

--- a/assets/www/editProfilePage.html
+++ b/assets/www/editProfilePage.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.js"></script>
 	
+	<script type="text/javascript" src="./js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="./js/editAccount.js"></script>
 	
 	<style type="text/css">
@@ -29,7 +30,7 @@
 </head>
 
 <body>
-<div data-role="page" id="editProfile" data-add-back-btn="true">
+<div data-role="page" id="editProfilePage1" data-add-back-btn="true">
 	
 	<div data-role="header" data-position="fixed" data-theme="b">
 		<h1>Edit Profile</h1>
@@ -79,5 +80,16 @@
 		<input type="button" id="editAccountButton" value="Save account">
 	</div>
 </div>
+
+<div data-role="page" id="editProfilePage2" data-add-back-btn="true">
+	
+	<div data-role="header" data-position="fixed" data-theme="b">
+		<h1>Edit Profile</h1>
+	</div>
+	<div data-role="content" data-theme="b">
+		<h1>test</h1>
+	</div>
+</div>
+
 </body>
 </html>
