--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -28,10 +28,11 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.js"></script>
-	
+	<script type="text/javascript" src="./js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="./js/login.js"></script>
 	<script type="text/javascript" src="./js/createAccount.js"></script>
 	<script type="text/javascript" src="./js/schedule.js"></script>
+	<script type="text/javascript" src="./js/editAccount.js"></script>
 	
 	<style type="text/css">
 		.ui-field-contain div.ui-slider-switch { width: 130px;  }
@@ -44,6 +45,18 @@
 			
 			location.href="test2.html";
 		}
+		
+		function setCookie(key, value) {  
+		   var expires = new Date();  
+		   expires.setTime(expires.getTime() + 43200000); //12 hours  
+		   document.cookie = key + '=' + value + ';expires=' + expires.toUTCString();  
+		   }  
+		  
+		function getCookie(key) {  
+		   var keyValue = document.cookie.match('(^|;) ?' + key + '=([^;]*)(;|$)');  
+		   return keyValue ? keyValue[2] : null;  
+		}  
+		
 	</script>
 </head>
 <body>
@@ -128,7 +141,7 @@
 		<h1>Main Menus</h1>
 	</div> 
 	<div data-role="content" data-theme="b">
-		<a href="editProfile.html" data-role="button">Edit profile</a>
+		<a href="editProfilePage.html" data-role="button">Edit profile</a>
 		<a href="#schedulePage" data-role="button">Schedule</a>
 		<a href="#manageCourts" data-role="button">Manage courts</a>
 		<a href="#mySchedule" data-role="button">My schedule</a>
@@ -241,6 +254,7 @@
 		<input type="button" id="makeScheduleButton" value="Make schedule">
 	</div>
 </div>
+
 
 </body>
 </html>
