--- a/assets/www/editProfilePage.html
+++ b/assets/www/editProfilePage.html
@@ -61,8 +61,8 @@
 			<input type="number" name="age" id="age" value="" placeholder="age"/>
 		</div>
 		<div data-role="fieldcontain"  >
-			<label for="nationality">Nationality:</label>
-			<select name="nationality" id="nationality">
+			<label for="ednationality">Nationality:</label>
+			<select name="ednationality" id="ednationality">
 			</select>
 		</div>
 		<div data-role="fieldcontain"  >
