--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -162,22 +162,69 @@
 		</div>
 		<div data-role="fieldcontain"  >
 			<fieldset data-role="controlgroup" data-type="horizontal" >
-			<legend>Time slot: </legend>
-			<input type="checkbox" name="timeslot" id="timeslot1" class="custom" value="7" data-mini="true" />
-			<label for="timeslot1">7:00-8:00</label>
-			<input type="checkbox" name="timeslot" id="timeslot2" class="custom" value="8" data-mini="true" />
-			<label for="timeslot2">8:00-9:00</label>
-			<input type="checkbox" name="timeslot" id="timeslot3" class="custom" value="9" data-mini="true" />
-			<label for="timeslot3">9:00-10:00</label>
-			<input type="checkbox" name="timeslot" id="timeslot4" class="custom" value="10" data-mini="true" />
-			<label for="timeslot4">10:00-11:00</label>
-			<input type="checkbox" name="timeslot" id="timeslot5" class="custom" value="11" data-mini="true" />
-			<label for="timeslot5">11:00-12:00</label>
-			<input type="checkbox" name="timeslot" id="timeslot6" class="custom" value="12" data-mini="true" />
-			<label for="timeslot6">12:00-01:00</label>
-			<input type="checkbox" name="timeslot" id="timeslot7" class="custom" value="01" data-mini="true" />
-			<label for="timeslot7">01:00-02:00</label>
+			<legend>Time Start: </legend>
+			<input type="radio" name="timestart" id="timestart1" class="custom" value="7" data-mini="true" />
+			<label for="timestart1">7:00</label>
+			<input type="radio" name="timestart" id="timestart2" class="custom" value="8" data-mini="true" />
+			<label for="timestart2">8:00</label>
+			<input type="radio" name="timestart" id="timestart3" class="custom" value="9" data-mini="true" />
+			<label for="timestart3">9:00</label>
+			<input type="radio" name="timestart" id="timestart4" class="custom" value="10" data-mini="true" />
+			<label for="timestart4">10:00</label>
+			<input type="radio" name="timestart" id="timestart5" class="custom" value="11" data-mini="true" />
+			<label for="timestart5">11:00</label>
+			<input type="radio" name="timestart" id="timestart6" class="custom" value="12" data-mini="true" />
+			<label for="timestart6">12:00</label>
+			<input type="radio" name="timestart" id="timestart7" class="custom" value="13" data-mini="true" />
+			<label for="timestart7">13:00</label>
+			<input type="radio" name="timestart" id="timestart8" class="custom" value="14" data-mini="true" />
+			<label for="timestart8">14:00</label>
+			<input type="radio" name="timestart" id="timestart9" class="custom" value="15" data-mini="true" />
+			<label for="timestart9">15:00</label>
+			<input type="radio" name="timestart" id="timestart10" class="custom" value="16" data-mini="true" />
+			<label for="timestart10">16:00</label>
+			<input type="radio" name="timestart" id="timestart11" class="custom" value="17" data-mini="true" />
+			<label for="timestart11">17:00</label>
+			<input type="radio" name="timestart" id="timestart12" class="custom" value="18" data-mini="true" />
+			<label for="timestart12">18:00</label>
+			<input type="radio" name="timestart" id="timestart13" class="custom" value="19" data-mini="true" />
+			<label for="timestart13">19:00</label>
+			<input type="radio" name="timestart" id="timestart14" class="custom" value="20" data-mini="true" />
+			<label for="timestart14">20:00</label>
 			
+			</fieldset>
+		</div>
+		<div data-role="fieldcontain"  >
+			<fieldset data-role="controlgroup" data-type="horizontal" >
+			<legend>Time End: </legend>
+			<input type="radio" name="timeend" id="timeend1" class="custom" value="8" data-mini="true" />
+			<label for="timeend1">8:00</label>
+			<input type="radio" name="timeend" id="timeend2" class="custom" value="9" data-mini="true" />
+			<label for="timeend2">9:00</label>
+			<input type="radio" name="timeend" id="timeend3" class="custom" value="10" data-mini="true" />
+			<label for="timeend3">10:00</label>
+			<input type="radio" name="timeend" id="timeend4" class="custom" value="11" data-mini="true" />
+			<label for="timeend4">11:00</label>
+			<input type="radio" name="timeend" id="timeend5" class="custom" value="12" data-mini="true" />
+			<label for="timeend5">12:00</label>
+			<input type="radio" name="timeend" id="timeend6" class="custom" value="13" data-mini="true" />
+			<label for="timeend6">13:00</label>
+			<input type="radio" name="timeend" id="timeend7" class="custom" value="14" data-mini="true" />
+			<label for="timeend7">14:00</label>
+			<input type="radio" name="timeend" id="timeend8" class="custom" value="15" data-mini="true" />
+			<label for="timeend8">15:00</label>
+			<input type="radio" name="timeend" id="timeend9" class="custom" value="16" data-mini="true" />
+			<label for="timeend9">16:00</label>
+			<input type="radio" name="timeend" id="timeend10" class="custom" value="17" data-mini="true" />
+			<label for="timeend10">17:00</label>
+			<input type="radio" name="timeend" id="timeend11" class="custom" value="18" data-mini="true" />
+			<label for="timeend11">18:00</label>
+			<input type="radio" name="timeend" id="timeend12" class="custom" value="19" data-mini="true" />
+			<label for="timeend12">19:00</label>
+			<input type="radio" name="timeend" id="timeend13" class="custom" value="20" data-mini="true" />
+			<label for="timeend13">20:00</label>
+			<input type="radio" name="timeend" id="timeend14" class="custom" value="21" data-mini="true" />
+			<label for="timeend14">21:00</label>
 			</fieldset>
 		</div>
 		<div data-role="fieldcontain"  >
@@ -212,15 +259,7 @@
 			
 			</fieldset>
 		</div>
-		<div data-role="fieldcontain"  >
-			<label for="pgender">Gender:</label>
-			<select name="pgender" id="pgender">
-				<option value="any">Any</option>
-				<option value="male">Male</option>
-				<option value="female">Female</option>
-			</select>
-		</div>
-		<div data-role="fieldcontain"  >
+			<div data-role="fieldcontain"  >
 			<fieldset data-role="controlgroup" data-type="horizontal" >
 			<legend>Age: </legend>
 			<input type="checkbox" name="page" id="page1" class="custom" value="10" data-mini="false" />
@@ -236,6 +275,15 @@
 			</fieldset>
 			
 		</div>
+		<div data-role="fieldcontain"  >
+			<label for="pgender">Gender:</label>
+			<select name="pgender" id="pgender">
+				<option value="any">Any</option>
+				<option value="male">Male</option>
+				<option value="female">Female</option>
+			</select>
+		</div>
+
 		<div data-role="fieldcontain"  >
 			<label for="pnationality">Nationality:</label>
 			<select name="pnationality" id="pnationality">
