--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -33,6 +33,8 @@
 	<script type="text/javascript" src="./js/createAccount.js"></script>
 	<script type="text/javascript" src="./js/schedule.js"></script>
 	<script type="text/javascript" src="./js/editAccount.js"></script>
+	<script type="text/javascript" src="./js/mySchedule.js"></script>
+	<script type="text/javascript" src="./js/myScheduleList.js"></script>
 	
 	<style type="text/css">
 		.ui-field-contain div.ui-slider-switch { width: 130px;  }
@@ -124,6 +126,7 @@
 			<label for="level">Level:</label>
 			<input type="number" name="level" id="level" value="" placeholder="level"/>
 		</div>
+		<a href="levelPage.html" data-role="button">What's my level</a>
 		<div data-role="fieldcontain"  >
 			<label for="email">E-Mail:</label>
 			<input type="text" name="email" id="email" value="" placeholder="email"/>
@@ -142,9 +145,10 @@
 	</div> 
 	<div data-role="content" data-theme="b">
 		<a href="editProfilePage.html" data-role="button">Edit profile</a>
+		<a href="levelPage.html" data-role="button">What's my level</a>
 		<a href="#schedulePage" data-role="button">Schedule</a>
 		<a href="#manageCourts" data-role="button">Manage courts</a>
-		<a href="#mySchedule" data-role="button">My schedule</a>
+		<a href="#myScheduleList" data-role="button">My schedule</a>
 	</div>
 	
 </div>
@@ -164,11 +168,11 @@
 			<fieldset data-role="controlgroup" data-type="horizontal" >
 			<legend>Time Start: </legend>
 			<input type="radio" name="timestart" id="timestart1" class="custom" value="7" data-mini="true" />
-			<label for="timestart1">7:00</label>
+			<label for="timestart1">07:00</label>
 			<input type="radio" name="timestart" id="timestart2" class="custom" value="8" data-mini="true" />
-			<label for="timestart2">8:00</label>
+			<label for="timestart2">08:00</label>
 			<input type="radio" name="timestart" id="timestart3" class="custom" value="9" data-mini="true" />
-			<label for="timestart3">9:00</label>
+			<label for="timestart3">09:00</label>
 			<input type="radio" name="timestart" id="timestart4" class="custom" value="10" data-mini="true" />
 			<label for="timestart4">10:00</label>
 			<input type="radio" name="timestart" id="timestart5" class="custom" value="11" data-mini="true" />
@@ -198,9 +202,9 @@
 			<fieldset data-role="controlgroup" data-type="horizontal" >
 			<legend>Time End: </legend>
 			<input type="radio" name="timeend" id="timeend1" class="custom" value="8" data-mini="true" />
-			<label for="timeend1">8:00</label>
+			<label for="timeend1">08:00</label>
 			<input type="radio" name="timeend" id="timeend2" class="custom" value="9" data-mini="true" />
-			<label for="timeend2">9:00</label>
+			<label for="timeend2">09:00</label>
 			<input type="radio" name="timeend" id="timeend3" class="custom" value="10" data-mini="true" />
 			<label for="timeend3">10:00</label>
 			<input type="radio" name="timeend" id="timeend4" class="custom" value="11" data-mini="true" />
@@ -300,6 +304,88 @@
 		</div>
 		
 		<input type="button" id="makeScheduleButton" value="Make schedule">
+	</div>
+</div>
+
+<div data-role="page" id="myScheduleList" data-add-back-btn="true">
+	
+	<div data-role="header" data-position="fixed" data-theme="b">
+		<h1>My Schedule List</h1>
+	</div>
+	<div data-role="content" data-theme="b">
+    <div data-role="controlgroup" data-type="horizontal">
+		<div data-role="fieldcontain" name="schedulelist", id="schedulelist" >
+		</div>
+		<div data-role="fieldcontain" name="schedulelistdate", id="schedulelistdate" >
+		</div>
+		<div data-role="fieldcontain" name="scheduleliststart", id="scheduleliststart" >
+		</div>
+		<div data-role="fieldcontain" name="schedulelistend", id="schedulelistend" >
+		</div>
+	</div>
+	</div>
+</div>
+
+
+
+<div data-role="page" id="mySchedulePage" data-add-back-btn="true">
+	
+	<div data-role="header" data-position="fixed" data-theme="b">
+		<h1>My Schedule</h1>
+	</div>
+	<div data-role="content" data-theme="b">
+    <div data-role="controlgroup" data-type="horizontal">
+		<div data-role="fieldcontain"  >
+			<label for="scheduleId">Schedule ID:</label>
+			<input type="text" name="scheduleId" id="scheduleId" class="custom" value="" data-mini="true" />
+		</div>		
+		<div data-role="fieldcontain"  >
+			<label for="date">Date:</label>
+			<input type="text" name="date" id="date" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="timestart">Time Start:</label>
+			<input type="text" name="timestart" id="timestart" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="timeend">Time End:</label>
+			<input type="text" name="timeend" id="timeend" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="plevel">Partner's Level:</label>
+			<input type="text" name="plevel" id="plevel" class="custom" value="" data-mini="true" />
+		</div>
+			<div data-role="fieldcontain"  >
+			<label for="page">Partner's Age:</label>
+			<input type="text" name="page" id="page" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="pgender">Partner's Gender:</label>
+			<input type="text" name="pgender" id="pgender" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="pnationality">Partner's Nationality:</label>
+			<input type="text" name="pnationality" id="pnationality" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="type">Type:</label>
+			<input type="text" name="type" id="type" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="status">Status:</label>
+			<input type="text" name="status" id="status" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="statuspush">Push:</label>
+			<input type="text" name="statuspush" id="statuspush" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
+			<label for="statusmail">Mail:</label>
+			<input type="text" name="statusmail" id="statusmail" class="custom" value="" data-mini="true" />
+		</div>
+		
+		<input type="button" id="cancellButton" value="Cancell schedule">
+	</div>
 	</div>
 </div>
 
