some functions are modified for cookies.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -314,13 +314,13 @@
 	</div>
 	<div data-role="content" data-theme="b">
     <div data-role="controlgroup" data-type="horizontal">
-		<div data-role="fieldcontain" name="schedulelist", id="schedulelist" >
+		<div data-role="fieldcontain" name="schedulelist" id="schedulelist" >
 		</div>
-		<div data-role="fieldcontain" name="schedulelistdate", id="schedulelistdate" >
+		<div data-role="fieldcontain" name="schedulelistdate" id="schedulelistdate" >
 		</div>
-		<div data-role="fieldcontain" name="scheduleliststart", id="scheduleliststart" >
+		<div data-role="fieldcontain" name="scheduleliststart" id="scheduleliststart" >
 		</div>
-		<div data-role="fieldcontain" name="schedulelistend", id="schedulelistend" >
+		<div data-role="fieldcontain" name="schedulelistend" id="schedulelistend" >
 		</div>
 	</div>
 	</div>
