--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -390,6 +390,10 @@
 			<input type="text" name="status" id="status" class="custom" value="" data-mini="true" />
 		</div>
 		<div data-role="fieldcontain"  >
+			<label for="puserid">Partner ID:</label>
+			<input type="text" name="puserid" id="puserid" class="custom" value="" data-mini="true" />
+		</div>
+		<div data-role="fieldcontain"  >
 			<label for="statuspush">Push:</label>
 			<input type="text" name="statuspush" id="statuspush" class="custom" value="" data-mini="true" />
 		</div>
